# ml-compiler-opt

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  Pipfile  README.md  check-license.sh  dev-requirements.txt  index.md  license-header.txt  presubmit.py  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.txt  run_tests.sh  versioned_pipenv
.github/workflows/: main.yml  packaging.yml
buildbot/: build_tflite.sh  buildbot_init.sh
compiler_opt/: __init__.py  baseline_cache.py  baseline_cache_test.py  cancellable_process.py  cancellable_process_test.py  package_config.py  type_map.py
compiler_opt/adt/: __init__.py  module_spec.py  module_spec_test.py
compiler_opt/benchmark/: benchmark_chromium.py  benchmark_llvm_test_suite.py  benchmark_report.py  benchmark_report_converter.py  benchmark_report_test.py  benchmarking_utils.py  filter_tests.py  gtest_executable_utils.py  list_gtests.py  requirements.txt
compiler_opt/core/: abstract_worker.py
compiler_opt/distributed/: buffered_scheduler.py  buffered_scheduler_test.py  nesting_worker.py  nesting_worker_test.py  worker.py  worker_manager.py  worker_test.py
compiler_opt/es/: blackbox_evaluator.py  blackbox_evaluator_test.py  blackbox_learner.py  blackbox_learner_test.py  blackbox_optimizers.py  es_worker.py  (+12 more)
docs/: Gemfile  _config.yml  about.md  adding_features.md  benchmarking.md  contributing.md  dev.md  extensibility.md  feature_importance.ipynb  index.md  thinlto.md
experimental/: chromium-bitcode-embedding.patch  chromium-thinlto-corpus-extraction.patch
(+362 files in other folders)
