[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-compiler-opt"
description = "Tooling for ML in LLVM"
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = [
  "absl-py>=1.0.0",
  "gin-config>=0.5.0",
  "psutil>=5.9.0",
  "tf-agents>=0.16.0",
  "tensorflow>=2.12.0",
  "dm-reverb>=0.11.0"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["compiler_opt*"]

[tool.setuptools.dynamic]
version = {attr = "compiler_opt.package_config.__version__"}
